--- a/qa-midrc.planx-pla.net/etlMapping.yaml
+++ b/qa-midrc.planx-pla.net/etlMapping.yaml
@@ -1,18 +1,4 @@
 mappings:
-  - name: midrc_annotation
-    doc_type: annotation
-    type: aggregator
-    root: annotation
-    props:
-      - name: project_id
-      - name: submitter_id
-      - name: case_ids
-      - name: airspace_disease_grading
-      - name: class_covid19_pneumonia
-      - name: midrc_mRALE_score
-      - name: annotation_method
-      - name: annotator_id
-      - name: instance_uids
   - name: midrc_case
     doc_type: case
     type: aggregator
@@ -199,17 +185,38 @@ mappings:
       - name: data_format
       - name: data_type
       - name: data_category
+      - name: acquisition_type
+      - name: angio_flag
       - name: contrast_bolus_agent
+      - name: convolution_kernel
       - name: detector_type
+      - name: diffusion_b_value
+      - name: diffusion_gradient_orientation
+      - name: echo_number
+      - name: echo_time
+      - name: echo_train_length
+      - name: exposure_modulation_type
       - name: image_type
+      - name: imaged_nucleus
       - name: imager_pixel_spacing
       - name: lossy_image_compression
       - name: manufacturer
       - name: manufacturer_model_name
       - name: modality
+      - name: multiframe_images
+      - name: number_of_temporal_positions
+      - name: patient_position
       - name: pixel_spacing
+      - name: radiopharmaceutical
+      - name: repetition_time
+      - name: scan_options
+      - name: sequence_variant
       - name: series_description
+      - name: slice_thickness
+      - name: software_version
+      - name: spacing_between_slices
       - name: spatial_resolution
+      - name: transducer_type
       - name: view_position
     injecting_props:
       dataset:
@@ -371,3 +378,17 @@ mappings:
           - name: study_uid
             src: study_uid
             fn: set
+  - name: midrc_annotation
+    doc_type: annotation
+    type: aggregator
+    root: annotation
+    props:
+      - name: project_id
+      - name: submitter_id
+      - name: case_ids
+      - name: airspace_disease_grading
+      - name: class_covid19_pneumonia
+      - name: midrc_mRALE_score
+      - name: annotation_method
+      - name: annotator_id
+      - name: instance_uids
