--- a/qa-brh.planx-pla.net/metadata/aggregate_config.json
+++ b/qa-brh.planx-pla.net/metadata/aggregate_config.json
@@ -219,7 +219,7 @@
 				"project_id": "path:id",
 				"study_title": "path:id",
 				"accession_number": "path:id",
-				"description": "",
+				"study_description": "path:description",
 				"funding": "",
 				"source": "",
 				"dbgap_accession_number": "path:dbgap_accession_number",
@@ -242,7 +242,7 @@
 				"short_name": {"path" : "collection_id", "filters": [ "uppercase" ]},
 				"full_name": {"path" :"collection_id", "filters": [ "uppercase" ]},
 				"dbgap_accession_number": {"path" :"collection_id", "filters": [ "uppercase" ]},
-				"description": {"path" :"description", "filters": [ "strip_html", "prepare_cidc_description" ]},
+				"study_description": {"path" :"description", "filters": [ "strip_html", "prepare_cidc_description" ]},
 				"image_types": "path:image_types",
 				"_subjects_count" : "path:subjects_count",
 				"doi" : {"path" :"doi", "filters": [ "uppercase" ]},
