--- a/jenkins-blood.planx-pla.net/manifest.json
+++ b/jenkins-blood.planx-pla.net/manifest.json
@@ -17,7 +17,7 @@
     "ws-storage": "quay.io/cdis/ws-storage:master",
     "peregrine": "quay.io/cdis/peregrine:master",
     "pidgin": "quay.io/cdis/pidgin:master",
-    "revproxy": "quay.io/cdis/nginx:1.17.6-ctds-1.0.1",
+    "revproxy": "quay.io/cdis/nginx:master",
     "sheepdog": "quay.io/cdis/sheepdog:master",
     "portal": "quay.io/cdis/data-portal:master",
     "fluentd": "fluent/fluentd-kubernetes-daemonset:v1.15.3-debian-cloudwatch-1.0",
@@ -32,8 +32,8 @@
     "metadata": "quay.io/cdis/metadata-service:master",
     "dashboard": "quay.io/cdis/gen3-statics:master",
     "requestor": "quay.io/cdis/requestor:master",
-    "cedar-wrapper": "quay.io/cdis/cedar-wrapper-service:0.2.0",
-    "kayako-wrapper": "quay.io/cdis/kayako-wrapper-service:0.1.1"
+    "cedar-wrapper": "quay.io/cdis/cedar-wrapper-service:master",
+    "kayako-wrapper": "quay.io/cdis/kayako-wrapper-service:master"
   },
   "sower": [
     {
