--- a/jenkins-brain.planx-pla.net/manifest.json
+++ b/jenkins-brain.planx-pla.net/manifest.json
@@ -21,7 +21,7 @@
     "peregrine": "quay.io/cdis/peregrine:master",
     "pidgin": "quay.io/cdis/pidgin:master",
     "portal": "quay.io/cdis/data-portal:master",
-    "revproxy": "quay.io/cdis/nginx:1.17.6-ctds-1.0.1",
+    "revproxy": "quay.io/cdis/nginx:master",
     "sheepdog": "quay.io/cdis/sheepdog:master",
     "spark": "quay.io/cdis/gen3-spark:master",
     "tube": "quay.io/cdis/tube:master",
@@ -34,8 +34,8 @@
     "metadata": "quay.io/cdis/metadata-service:master",
     "dashboard": "quay.io/cdis/gen3-statics:master",
     "requestor": "quay.io/cdis/requestor:master",
-    "cedar-wrapper": "quay.io/cdis/cedar-wrapper-service:0.2.0",
-    "kayako-wrapper": "quay.io/cdis/kayako-wrapper-service:0.1.1"
+    "cedar-wrapper": "quay.io/cdis/cedar-wrapper-service:master",
+    "kayako-wrapper": "quay.io/cdis/kayako-wrapper-service:master"
   },
   "arborist": {
     "deployment_version": "2"
