--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -8,11 +8,11 @@ qa-mickey.planx-pla.net @nmetokishlubsky @haraprasadj
 qa-anvil.planx-pla.net @atharvar28
 qa-dcp.planx-pla.net @uc-cdis/planx-qa
 
-qa-covid19.planx-pla.net @atharvar28
-qa-ibd.planx-pla.net @atharvar28
-qa-jcoin.planx-pla.net @atharvar28
+qa-covid19.planx-pla.net @atharvar28 @beamcb
+qa-ibd.planx-pla.net @atharvar28 @beamcb
+qa-jcoin.planx-pla.net @atharvar28 @beamcb
 qa-kidsfirst.planx-pla.net @radhrreddy @atharvar28
-qa-niaid.planx-pla.net @hughestr @atharvar28
+qa-niaid.planx-pla.net @beamcb @atharvar28
 
 qa-heal.planx-pla.net @briennal @haraprasadj
 qa-brh.planx-pla.net @briennal @haraprasadj
