--- a/jenkins-niaid.planx-pla.net/manifest.json
+++ b/jenkins-niaid.planx-pla.net/manifest.json
@@ -31,7 +31,9 @@
     "metadata": "quay.io/cdis/metadata-service:master",
     "requestor": "quay.io/cdis/requestor:master",
     "cedar-wrapper": "quay.io/cdis/cedar-wrapper-service:master",
-    "kayako-wrapper": "quay.io/cdis/kayako-wrapper-service:master"
+    "kayako-wrapper": "quay.io/cdis/kayako-wrapper-service:master",    
+    "argo-wrapper": "quay.io/cdis/argo-wrapper:master",
+    "cohort-middleware": "quay.io/cdis/cohort-middleware:master"
   },
   "portal": {
     "GEN3_BUNDLE": "nct"
