--- a/qa.planx-pla.net/manifest.json
+++ b/qa.planx-pla.net/manifest.json
@@ -7,21 +7,21 @@
     "autodeploy": "yes"
   },
   "versions": {
-    "acronymbot": "quay.io/cdis/acronym-bot:2023.02",
-    "arborist": "quay.io/cdis/arborist:2023.02",
+    "acronymbot": "quay.io/cdis/acronym-bot:2023.10",
+    "arborist": "quay.io/cdis/arborist:2023.10",
     "aws-es-proxy": "quay.io/cdis/aws-es-proxy:v1.3.1",
-    "dashboard": "quay.io/cdis/gen3-statics:2023.02",
-    "fence": "quay.io/cdis/fence:2023.02",
+    "dashboard": "quay.io/cdis/gen3-statics:2023.10",
+    "fence": "quay.io/cdis/fence:2023.10",
     "fluentd": "fluent/fluentd-kubernetes-daemonset:v1.15.3-debian-cloudwatch-1.0",
     "jenkins": "quay.io/cdis/jenkins:master",
-    "jenkins-worker": "quay.io/cdis/gen3-qa-worker:master",
-    "jenkins-ci-worker": "quay.io/cdis/gen3-ci-worker:master",
-    "peregrine": "quay.io/cdis/peregrine:2023.02",
-    "portal": "quay.io/cdis/data-portal:2023.02",
-    "qabot": "quay.io/cdis/qa-bot:master",
-    "revproxy": "quay.io/cdis/nginx:2023.02",
-    "sheepdog": "quay.io/cdis/sheepdog:2023.02",
-    "thor": "quay.io/cdis/thor:master"
+    "jenkins-worker": "quay.io/cdis/gen3-qa-worker:2023.10",
+    "jenkins-ci-worker": "quay.io/cdis/gen3-ci-worker:2023.10",
+    "peregrine": "quay.io/cdis/peregrine:2023.10",
+    "portal": "quay.io/cdis/data-portal:2023.10",
+    "qabot": "quay.io/cdis/qa-bot:2023.10",
+    "revproxy": "quay.io/cdis/nginx:2023.10",
+    "sheepdog": "quay.io/cdis/sheepdog:2023.10",
+    "thor": "quay.io/cdis/thor:2023.10"
   },
   "arborist": {
     "deployment_version": "2"
